--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: Swatinem/rust-cache@v2
       - name: build binary
-        run: xtask bundle -p x_fader
+        run: cargo xtask bundle -p x_fader
       - name: upload artifact
         uses: actions/upload-artifact@v3
         with:
