--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,10 +13,10 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: build binary
         run: cargo xtask bundle -p x_fader
-      - name: add file extension
-        run: python3 rename_release_files_windows.py
+      - name: add release prefix
+        run: python3 add_release_prefix.py windows_
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: ".\target\bundled\\*"
+          artifacts: '.\target\bundled\*'
           allowUpdates: true
           tag: "release"
