--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,6 @@ jobs:
           allowUpdates: true
           tag: "release"
 
-jobs:
   build-linux:
     name: Build on Linux
     runs-on: ubuntu-latest
@@ -38,8 +37,7 @@ jobs:
           allowUpdates: true
           tag: "release"
 
-jobs:
-  build-linux:
+  build-macos:
     name: Build on MacOS
     runs-on: macos-latest
     steps:
